crates/sncast/tests/e2e/account/snapshots/main__e2e__account__deploy__happy_case@oz_cairo_0_class_hash.snap
---
source: crates/sncast/tests/e2e/account/deploy.rs
expression: accounts_json
---
{
  "accounts": {
    "alpha-sepolia": {
      "my_account": {
        "address": "[value]",
        "class_hash": "0x4d07e40e93398ed3c76981e72dd1fd22557a78ce36c0515f679e27f0bb5bc5f",
        "deployed": true,
        "legacy": true,
        "public_key": "[value]",
        "salt": "[value]",
        "signer": {
          "private_key": "[value]",
          "type": "private_key"
        },
        "type": "open_zeppelin"
      }
    }
  },
  "version": {
    "$serde_json::private::Number": "2"
  }
}
