crates/sncast/tests/e2e/account/snapshots/main__e2e__account__deploy__happy_case_max_fee.snap
---
source: crates/sncast/tests/e2e/account/deploy.rs
expression: accounts_json
---
{
  "accounts": {
    "alpha-sepolia": {
      "my_account": {
        "address": "[value]",
        "class_hash": "[value]",
        "deployed": true,
        "legacy": false,
        "public_key": "[value]",
        "salt": "[value]",
        "signer": {
          "private_key": "[value]",
          "type": "private_key"
        },
        "type": "open_zeppelin"
      }
    }
  },
  "version": {
    "$serde_json::private::Number": "2"
  }
}
